[package]
name = "kaminari"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
nom = "6.1.2"
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
serde = "1.0.126"
serialport = "4.0.1"
sqlx = { version = "0.5.5", features = [ "sqlite", "runtime-tokio-rustls" ] }
